fixed overlapping subtasks

--- a/webserver/style.css
+++ b/webserver/style.css
@@ -21,6 +21,7 @@ h1 {
 .branch {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 }
 
 /* .right {
